@@ -1,5 +1,10 @@
 2005-08-27  Bruno Haible  <bruno@clisp.org>
 
+	* src/integer/bitwise/cl_I_ash_I.cc (ash): Avoid shifting a 32-bit
+	zero value by more than 31 bits.
+
+2005-08-27  Bruno Haible  <bruno@clisp.org>
+
 	Make the long-float overflow check work on 64-bit platforms.
 	* src/float/lfloat/cl_LF.h (LF_exp_mid, LF_exp_high): Define as
 	'unsigned int', not 'unsigned long'.
